package de.gkvtransmitter.factory;

public interface Factory {
    Object create();
}