package de.gkvtransmitter.parser;

public interface ParserFactory<T> {
    T parse();
}