package de.gkvtransmitter.presentation;

public class View {
}